# discord-text-sanitizer

./: README.md  discordtextsanitizer.py  pyproject.toml  setup.cfg
discordtextsanitizer/: __init__.py  _sanitizers.py
