[bdist_wheel]
python-tag = py37

[metadata]
name = discord-text-sanitizer
version = 0.0.1
description = Text Sanitization For Discord
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = mikeshardmind
author_email = michael@michaelhall.tech
url = https://github.com/mikeshardmind/discord-text-sanitizer
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Communications :: Chat

[options]
py_modules=["discordtextsanitizer"]
python_requires = >=3.6
install_requires =
    ftfy
    bython-bidi
